feat: extract all review comments and improve documentation
BREAKING CHANGE: Extension now extracts all review comments (bots and humans),
not just bot comments. This is a major functionality update to v3.0.0.

Major changes:
- Extract all review comments with author type classification
- Add author badges (🤖 for bots, 👤 for humans) to differentiate comment types
- Add "By Author Type" breakdown in summary format
- Implement outdated/resolved comment filtering with stats
- Enhanced bot detection for GitHub Copilot and Cursor
- Rename extension to "GitHub PR Review Extractor"
- Update all UI text from "issues" to "comments"

Documentation:
- Create comprehensive CONTRIBUTING.md with contribution guidelines
- Update README.md with current v3.0.0 functionality
- Add TESTING_GUIDE.md for manual testing procedures
- Add RELEASE_NOTES_v3.0.0.md documenting major changes
- Add FIX_SUMMARY_v2.1.1.md for bug fix documentation
- Add UPDATE_SUMMARY.md for version history

Technical improvements:
- Add isBot, isHuman, type, and author fields to comment objects
- Implement filterIssues() with excludeOutdated option
- Improve DOM selector resilience for GitHub UI changes
- Update manifest.json to v3.0.0 and new extension name

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "GitHub PR Bot Extractor",
-  "version": "2.0.0",
-  "description": "Extract Copilot and Bugbot issues/suggestions from GitHub PRs to clipboard",
+  "name": "GitHub PR Review Extractor",
+  "version": "3.0.0",
+  "description": "Extract all review comments from GitHub PRs (bots and humans) with filtering",
   "permissions": [
     "activeTab",
     "clipboardWrite"
