refactor: migrate extension to TypeScript with modular architecture
Restructured the GitHub PR Bot Extractor extension from vanilla JavaScript
to TypeScript with a modular, maintainable architecture.

Key Changes:
- Migrated all core functionality to TypeScript
- Reorganized codebase into logical directories (src/core, src/services,
  src/ui, src/utils)
- Archived legacy JavaScript files to archive/legacy-js/
- Moved documentation to dedicated docs/ directory
- Added build system (build.js) for manifest generation
- Implemented internationalization support (i18n) with multi-language
  support (en, de, es, fr)
- Added new features: analytics, batch processing UI, virtual scrolling
- Created type definitions for Chrome APIs, GitHub data, and LLM interfaces

Architecture:
- Core: content scripts, extractors, filters, sorters, formatters
- Services: GitHub API, LLM client, review engine, batch processor
- UI: popup, settings, history, analytics, batch UI (all TypeScript)
- Utils: caching, error handling, i18n, virtual scroll

--- a/manifest.base.json
+++ b/manifest.base.json
@@ -15,27 +15,27 @@
     "https://*/"
   ],
   "background": {
-    "service_worker": "dist/background.js"
+    "service_worker": "background.js"
   },
-  "options_page": "dist/settings.html",
+  "options_page": "settings.html",
   "action": {
-    "default_popup": "dist/popup.html",
+    "default_popup": "popup.html",
     "default_icon": {
-      "16": "dist/icons/icon16.png",
-      "48": "dist/icons/icon48.png",
-      "128": "dist/icons/icon128.png"
+      "16": "icons/icon16.png",
+      "48": "icons/icon48.png",
+      "128": "icons/icon128.png"
     }
   },
   "content_scripts": [
     {
       "matches": ["https://github.com/*/*/pull/*"],
-      "js": ["dist/filters.js", "dist/sorters.js", "dist/llm-client.js", "dist/github-api.js", "dist/review-engine.js", "dist/content.js"]
+      "js": ["filters.js", "sorters.js", "llm-client.js", "github-api.js", "review-engine.js", "content.js"]
     }
   ],
   "icons": {
-    "16": "dist/icons/icon16.png",
-    "48": "dist/icons/icon48.png",
-    "128": "dist/icons/icon128.png"
+    "16": "icons/icon16.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   },
   "web_accessible_resources": [
     {
@@ -46,3 +46,4 @@
     }
   ]
 }
+
