--- a/package.json
+++ b/package.json
@@ -5,15 +5,20 @@
   "scripts": {
     "test": "vitest",
     "test:coverage": "vitest --coverage",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "build": "node build.js",
+    "build:prod": "NODE_ENV=production node build.js",
+    "watch": "node build.js --watch"
   },
   "devDependencies": {
     "@types/chrome": "^0.0.268",
     "@types/node": "^20.0.0",
     "@vitest/coverage-v8": "^1.0.0",
+    "esbuild": "^0.27.2",
     "typescript": "^5.3.0",
+    "vite": "^7.3.0",
+    "vite-plugin-static-copy": "^3.1.4",
     "vitest": "^1.0.0"
   },
   "type": "module"
 }
-
