--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,8 @@
     "noEmit": true,
     "allowJs": true,
     "checkJs": false,
-    "types": ["chrome", "node"],
-    "typeRoots": ["./node_modules/@types", "./types"]
+    "types": ["chrome"],
+    "typeRoots": ["./node_modules/@types", "src/types"]
   },
   "include": [
     "src/**/*",
