refactor: improve type safety and error handling across codebase
- Export main service classes (GitHubAPIClient, LLMClient, ReviewEngine, BatchProcessor) for better modularity
- Add stronger TypeScript types (PRMetadata, FetchPRDataResult, ReviewableFile, ParsedPRUrl)
- Centralize error handling with new utility functions and error categories
- Refactor popup UI with i18n support and history API integration
- Add watch mode support to build system with static file copying
- Update documentation to reflect new file paths (src/core/extractor.ts)
- Remove deprecated chrome.d.ts and history UI components
- Update unit tests to align with refactored utilities

--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "4.0.0",
   "description": "Chrome extension to extract review comments from GitHub PRs",
   "scripts": {
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
     "type-check": "tsc --noEmit",
     "build": "node build.js",
     "build:prod": "NODE_ENV=production node build.js",
@@ -15,9 +16,8 @@
     "@types/node": "^20.0.0",
     "@vitest/coverage-v8": "^1.0.0",
     "esbuild": "^0.27.2",
+    "jsdom": "^24.0.0",
     "typescript": "^5.3.0",
-    "vite": "^7.3.0",
-    "vite-plugin-static-copy": "^3.1.4",
     "vitest": "^1.0.0"
   },
   "type": "module"
